<resources>
    <string name="app_name">Hikers</string>
    <!--  로그인 화면  -->
    <string name="id">아이디</string>
    <string name="login">로그인</string>
    <string name="not_member">아직 회원이 아니신가요?</string>
    <string name="sign_up">가입하기</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="next">다음</string>

    <string name="plz_input_id">아이디를 입력해 주세요</string>
    <string name="plz_input_pw">비밀번호를 입력해 주세요</string>
    <string name="plz_check_pw">비밀번호를 확인해 주세요</string>
    <string name="plz_input_name">이름을 입력해 주세요</string>
    <string name="no_exist_id">가입되지 않은 아이디입니다</string>
    <string name="already_exist_id">이미 가입된 아이디입니다</string>
    <string name="not_match_pw">비밀번호가 맞지 않습니다</string>
    <string name="diffrent_pw_check">비밀번호 정보가 일치하지 않습니다</string>
    <string name="id_use_eng_num">아이디는 영문과 숫자만 사용해 주세요</string>
    <string name="pw_more_eight">비밀번호는 8자리 이상으로 만들어 주세요</string>
    <string name="pw_must_have_special">비밀번호는 반드시 특수문자를 포함해 주세요</string>

    <!--  회원정보 화면  -->
    <string name="plz_type_introduce">자기소개를 입력해주세요.</string>
    <string name="update_user_info">회원정보 변경</string>
    <string name="summit_sign_up">가입하기</string>

    <!--  메인 화면  -->
    <string name="user_greeting">안녕하세요, %s님!</string>
    <string name="no_post">최신 게시물이 없습니다</string>
    <string name="post_title">게시물 제목</string>
    <string name="post_location">위치 정보</string>
    <string name="post_writer_name">작성자</string>
    <string name="post_time">작성 시간</string>

    <!--  디테일 화면  -->
    <string name="sample_text_body">Lorem ipsum dolor sit amet consectetur. Mi ut cum faucibus venenatis consectetur bibendum. Vitae facilisis lacus pharetra egestas enim quis hendrerit. Molestie ultrices tristique faucibus placerat. Eu eu cras at ornare tortor sapien purus sagittis commodo.</string>
    <string name="sample_text_body_long">Lorem ipsum dolor sit amet consectetur. Mi ut cum faucibus venenatis consectetur bibendum. Vitae facilisis lacus pharetra egestas enim quis hendrerit. Molestie ultrices tristique faucibus placerat. Eu eu cras at ornare tortor sapien purus sagittis commodo.Lorem ipsum dolor sit amet consectetur. Mi ut cum faucibus venenatis consectetur bibendum. Vitae facilisis lacus pharetra egestas enim quis hendrerit. Molestie ultrices tristique faucibus placerat. Eu eu cras at ornare tortor sapien purus sagittis commodo.Lorem ipsum dolor sit amet consectetur. Mi ut cum faucibus venenatis consectetur bibendum. Vitae facilisis lacus pharetra egestas enim quis hendrerit. Molestie ultrices tristique faucibus placerat. Eu eu cras at ornare tortor sapien purus sagittis commodo.Lorem ipsum dolor sit amet consectetur. Mi ut cum faucibus venenatis consectetur bibendum. Vitae facilisis lacus pharetra egestas enim quis hendrerit. Molestie ultrices tristique faucibus placerat. Eu eu cras at ornare tortor sapien purus sagittis commodo.Lorem ipsum dolor sit amet consectetur. Mi ut cum faucibus venenatis consectetur bibendum. Vitae facilisis lacus pharetra egestas enim quis hendrerit. Molestie ultrices tristique faucibus placerat. Eu eu cras at ornare tortor sapien purus sagittis commodo.</string>


    <!-- 마이페이지 화면 -->
    <string name="edit_myinfo">회원정보 수정</string>
    <string name="introduction">자기소개</string>
    <string name="more">더보기</string>
    <string name="record">내가 작성한 게시물</string>
    <string name="like">내가 좋아한 게시물</string>
    <string name="no_written_posts">작성한 게시물이 없습니다.</string>
    <string name="no_liked_posts">좋아한 게시물이 없습니다.</string>
    <string name="keyword">키워드</string>

    <!--  글쓰기 화면  -->
    <string name="enter_title">게시글 제목을 입력해주세요.</string>
    <string name="enter_body">게시글 내용을 입력해주세요.</string>
    <string name="upload_post">올리기</string>
    <string name="title_error">게시글 제목을 입력해 주세요.</string>

    <!--  애니메이션 공유 요소 이름  -->
    <string name="trans_post_image">post_image</string>
    <string name="trans_profile_image">profile_image</string>



</resources>