<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/layout_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/post_item_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="center"
            android:background="@color/light_grey"
            android:src="@drawable/hikers_icon_small_grey" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="11dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_title"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_pin"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="11dp"
                android:src="@drawable/pin_icon"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_title"
                app:layout_constraintTop_toTopOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/post_location"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/iv_pin"
                app:layout_constraintTop_toTopOf="@id/tv_title"/>

            <TextView
                android:id="@+id/tv_writer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_writer_name"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/tv_time"
                android:text="@string/post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                app:layout_constraintStart_toEndOf="@id/tv_writer_name"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="8sp"
                />
            <ImageView
                android:id="@+id/iv_heart_post"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/empty_heart_icon"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</merge>