<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_sign_up"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:src="@drawable/hikers_main_logo"
            app:layout_constraintBottom_toTopOf="@id/et_login_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/id"
            android:inputType="textVisiblePassword"
            android:paddingHorizontal="12dp"
            android:textColor="@color/theme_green2"
            android:textColorHint="@color/hint_green"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/et_login_pw"
            app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />

        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:textColor="@color/theme_green2"
            android:textColorHint="@color/hint_green"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/et_login_id" />

        <android.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/default_button_disable"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/et_login_pw" />

        <TextView
            android:id="@+id/tv_login_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="에러메세지용"
            android:textColor="@color/error_msg"
            android:textSize="12dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_stroke"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bottom_explain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_member"
            android:textColor="#949494"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_bottom_sign_up_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bottom_sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/sign_up"
            android:textColor="@color/login_sign_up"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_bottom_explain_text"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>