<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/iv_sign_up_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:src="@drawable/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.65" />

    <EditText
        android:id="@+id/et_sign_up_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/id"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/iv_sign_up_title" />

    <EditText
        android:id="@+id/et_sign_up_pw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_id" />

    <EditText
        android:id="@+id/et_sign_up_check_pw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/check_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_pw" />

    <TextView
        android:id="@+id/tv_sign_up_id_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="- 아이디 에러 메세지"
        android:textColor="@color/error_msg"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/et_sign_up_check_pw"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_check_pw" />

    <TextView
        android:id="@+id/tv_sign_up_pw_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="- 비밀번호 에러 메세지"
        android:textColor="@color/error_msg"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/et_sign_up_check_pw"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id_error_msg" />

    <TextView
        android:id="@+id/tv_sign_up_check_pw_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="- 비밀번호확인 에러 메세지"
        android:textColor="@color/error_msg"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/et_sign_up_check_pw"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pw_error_msg" />

    <android.widget.Button
        android:id="@+id/btn_sign_up_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/default_button_disable"
        android:text="다음"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_check_pw_error_msg" />

</androidx.constraintlayout.widget.ConstraintLayout>